--- a/examples/custom_config.json
+++ b/examples/custom_config.json
@@ -1,13 +1,13 @@
 {
 "SystemVars" : [
     {
-        "%%SIPP_PATH" : "/home/vragov/Загрузки/sipp/sipp-3.4.1/sipp",
-        "%%SRC_PATH" : "/home/vragov/scripts/ecss.3.6.0",
-        "%%TEMP_PATH" : "/home/vragov/scripts/ecss.3.6.0/temp",
+        "%%SIPP_PATH" : "/home/vragov/Work/sipp/sipp/sipp-3.4.1/sipp",
+        "%%SRC_PATH" : "/home/vragov/Work/scripts/ecss.3.6.0",
+        "%%TEMP_PATH" : "/home/vragov/Work/scripts/ecss.3.6.0/temp",
         "%%REG_XML" : "./xml/reg_user.xml",
         "%%SF_XML" : "./xml/send_sf.xml",
-        "%%LOG_PATH" : "/home/vragov/scripts/ecss.3.6.0/temp/log",
-        "%%IP" : "192.168.1.6",
+        "%%LOG_PATH" : "/home/vragov/Work/scripts/ecss.3.6.0/temp/log",
+        "%%IP" : "192.168.118.249",
         "%%SERV_IP" : "192.168.118.245",
         "%%EXTER_IP" : "192.168.118.245",
         "%%EXTER_PORT" : "5015",
